# chat-with-db-project

./: .coverage  .flake8  .gitignore  README.md  chat_cli.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
src/: __init__.py  agent.py  cli.py  config.py  memory.py  utils.py
tests/: MEMORY_TEST_PLAN.md  __init__.py  conftest.py  test_agent.py  test_cli.py  test_config.py  test_integration.py  test_memory.py  test_utils.py
